# OmegaOS_Appearance

./: README.md  meson.build  org.omegaos.Appearance.json
.flatpak-builder/cache/refs/heads/x86_64-org.omegaos.Appearance.json/: init
.flatpak-builder/checksums/: x86_64-org.omegaos.Appearance.json
data/: meson.build  org.omegaos.Appearance.appdata.xml.in  org.omegaos.Appearance.desktop.in  org.omegaos.Appearance.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: appearance.data.gresource.xml  main.js  meson.build  org.omegaos.Appearance.src.gresource.xml
src/window/: window.js  window.ui
